syntax = "proto3";

package dataKey;

option java_multiple_files = true;
option java_package = "jp.inaba.datakey.grpc";

service CreateDataKey {
  rpc handle (CreateDataKeyRequest) returns (CreateDataKeyResponse);
}

message CreateDataKeyRequest {
  string relationId = 1;
}

message CreateDataKeyResponse {
  string base64PlaneDataKey = 1;
}