syntax = "proto3";

package dataKey;

option java_multiple_files = true;
option java_package = "jp.inaba.datakey.grpc";

service GetDataKey {
  rpc handle (GetDataKeyRequest) returns (GetDataKeyResponse);
}

message GetDataKeyRequest {
  string relationId = 1;
}

message GetDataKeyResponse {
  string base64PlaneDataKey = 1;
}